SimpleParser/.antlr/UFABCGrammarParser.java
// Generated from c:/Users/diogo/OneDrive/Documentos/Compiladores/ProjetoFinal/SimpleParser/UFABCGrammar.g4 by ANTLR 4.13.1

    import java.util.ArrayList;
    import java.util.HashMap;
    import java.util.HashSet; 
    import io.compiler.types.*;
    import io.compiler.core.exceptions.*;
    import io.compiler.core.ast.*;
    import java.util.Stack;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class UFABCGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, OP_SOM_SUB=16, 
		OP_MULT_DIV=17, OP_REL=18, OP_LOG=19, TXT=20, NUM=21, ID=22, AP=23, FP=24, 
		AC=25, FC=26, PV=27, WS=28;
	public static final int
		RULE_programa = 0, RULE_declara = 1, RULE_bloco = 2, RULE_cmd = 3, RULE_cmdLeitura = 4, 
		RULE_cmdEscrita = 5, RULE_cmdAtr = 6, RULE_cmdIF = 7, RULE_cmdWhile = 8, 
		RULE_cmdDoWhile = 9, RULE_expr = 10, RULE_exprl = 11, RULE_termo = 12, 
		RULE_termol = 13, RULE_fator = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declara", "bloco", "cmd", "cmdLeitura", "cmdEscrita", "cmdAtr", 
			"cmdIF", "cmdWhile", "cmdDoWhile", "expr", "exprl", "termo", "termol", 
			"fator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'fimprog'", "'declare'", "'number'", "'text'", "'real'", 
			"','", "'leia'", "'escreva'", "':='", "'se'", "'entao'", "'senao'", "'enquanto'", 
			"'execute'", null, null, null, null, null, null, null, "'('", "')'", 
			"'{'", "'}'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "OP_SOM_SUB", "OP_MULT_DIV", "OP_REL", "OP_LOG", 
			"TXT", "NUM", "ID", "AP", "FP", "AC", "FC", "PV", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UFABCGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private HashMap<String, Var> symbolTable = new HashMap<String, Var>();
	    private ArrayList<Var> currentDecl = new ArrayList<Var>();
	    private Types currentType;
	    private Types leftType = null;
	    private Types rightType = null;
	    private Program program = new Program();
	    private String strExpr = "";
	    private IfCommand currentIfCommand;
	    private WhileCommand currentWhileCommand;
	    private DoWhileCommand currentDoWhileCommand;

	    private Stack<ArrayList<Command>> stack = new Stack<ArrayList<Command>>();

	    public void updateTypes() {
	        for(Var v : currentDecl) {
	            v.setType(currentType);
	            symbolTable.put(v.getId(), v);
	        }
	    }

	    public void exibirVar() {
	        for(String id : symbolTable.keySet()) {
	            System.out.println(symbolTable.get(id));
	        }
	    }

	    public Program getProgram() {
	        return this.program;
	    }

	    public boolean isDeclared(String id) {
	        return symbolTable.get(id) != null;
	    }

	public UFABCGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(UFABCGrammarParser.ID, 0); }
		public TerminalNode AC() { return getToken(UFABCGrammarParser.AC, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode FC() { return getToken(UFABCGrammarParser.FC, 0); }
		public List<DeclaraContext> declara() {
			return getRuleContexts(DeclaraContext.class);
		}
		public DeclaraContext declara(int i) {
			return getRuleContext(DeclaraContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__0);
			setState(31);
			match(ID);
			 program.setName(_input.LT(-1).getText()); 
			                                  stack.push(new ArrayList<Command>());
			                                
			setState(33);
			match(AC);
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(34);
				declara();
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__2 );
			setState(39);
			bloco();
			setState(40);
			match(FC);
			setState(41);
			match(T__1);

			                    for(Var var : symbolTable.values()) {
			                        if(!var.isUsed()) {
			                            try {
			                                throw new UFABCWarningException("Warning: Variável [" + var.getId() + "] não eh usada!");
			                            }
			                            catch(UFABCWarningException ex) {
			                                System.err.println(ex.getMessage());
			                            }
			                        }
			                    }
			                    program.setSymbolTable(symbolTable);
			                    program.setCommandList(stack.pop());
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaraContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(UFABCGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(UFABCGrammarParser.ID, i);
		}
		public TerminalNode PV() { return getToken(UFABCGrammarParser.PV, 0); }
		public DeclaraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declara; }
	}

	public final DeclaraContext declara() throws RecognitionException {
		DeclaraContext _localctx = new DeclaraContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declara);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(T__2);
			 currentDecl.clear(); 
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(46);
				match(T__3);
				 currentType = Types.NUMBER; 
				}
				break;
			case T__4:
				{
				setState(48);
				match(T__4);
				 currentType = Types.TEXT; 
				}
				break;
			case T__5:
				{
				setState(50);
				match(T__5);
				 currentType = Types.REAL; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(54);
			match(ID);
			 currentDecl.add(new Var(_input.LT(-1).getText())); 
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(56);
				match(T__6);
				setState(57);
				match(ID);
				 currentDecl.add(new Var(_input.LT(-1).getText())); 
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			updateTypes();
			setState(65);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				cmd();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4246272L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdContext extends ParserRuleContext {
		public CmdLeituraContext cmdLeitura() {
			return getRuleContext(CmdLeituraContext.class,0);
		}
		public CmdEscritaContext cmdEscrita() {
			return getRuleContext(CmdEscritaContext.class,0);
		}
		public CmdAtrContext cmdAtr() {
			return getRuleContext(CmdAtrContext.class,0);
		}
		public CmdIFContext cmdIF() {
			return getRuleContext(CmdIFContext.class,0);
		}
		public CmdWhileContext cmdWhile() {
			return getRuleContext(CmdWhileContext.class,0);
		}
		public CmdDoWhileContext cmdDoWhile() {
			return getRuleContext(CmdDoWhileContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmd);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				cmdLeitura();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				cmdEscrita();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				cmdAtr();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				cmdIF();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				cmdWhile();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				cmdDoWhile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdLeituraContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(UFABCGrammarParser.AP, 0); }
		public TerminalNode ID() { return getToken(UFABCGrammarParser.ID, 0); }
		public TerminalNode FP() { return getToken(UFABCGrammarParser.FP, 0); }
		public TerminalNode PV() { return getToken(UFABCGrammarParser.PV, 0); }
		public CmdLeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLeitura; }
	}

	public final CmdLeituraContext cmdLeitura() throws RecognitionException {
		CmdLeituraContext _localctx = new CmdLeituraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmdLeitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__7);
			setState(81);
			match(AP);
			 program.setReadCommandUsed(true); 
			setState(83);
			match(ID);
			 if (!isDeclared(_input.LT(-1).getText())) {
			                        throw new UFABCSemanticException("Variável [" +(_input.LT(-1).getText()) + "] não declarada!");
			                    } 
			                    symbolTable.get(_input.LT(-1).getText()).setInitialized(true);
			                    Command cmdRead = new ReadCommand(symbolTable.get(_input.LT(-1).getText()));
			                    stack.peek().add(cmdRead);
			                    
			setState(85);
			match(FP);
			setState(86);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdEscritaContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(UFABCGrammarParser.AP, 0); }
		public TerminalNode FP() { return getToken(UFABCGrammarParser.FP, 0); }
		public TerminalNode PV() { return getToken(UFABCGrammarParser.PV, 0); }
		public TerminalNode TXT() { return getToken(UFABCGrammarParser.TXT, 0); }
		public TerminalNode ID() { return getToken(UFABCGrammarParser.ID, 0); }
		public CmdEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscrita; }
	}

	public final CmdEscritaContext cmdEscrita() throws RecognitionException {
		CmdEscritaContext _localctx = new CmdEscritaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdEscrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__8);
			setState(89);
			match(AP);
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TXT:
				{
				setState(90);
				match(TXT);
				}
				break;
			case ID:
				{
				setState(91);
				match(ID);
				   if (!isDeclared(_input.LT(-1).getText())) {
				                            throw new UFABCSemanticException("Variável [" +(_input.LT(-1).getText()) + "] não declarada!");
				                        } 
				                        if(!symbolTable.get(_input.LT(-1).getText()).isInitialized()) {
				                            throw new UFABCSemanticException("Variável [" +(_input.LT(-1).getText()) + "] não inicializada!");
				                        }
				                        symbolTable.get(_input.LT(-1).getText()).setUsed(true);
				                    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			 Command cmdWrite = new WriteCommand(_input.LT(-1).getText()); 
			                      stack.peek().add(cmdWrite);
			setState(96);
			match(FP);
			setState(97);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdAtrContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(UFABCGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(UFABCGrammarParser.ID, i);
		}
		public TerminalNode PV() { return getToken(UFABCGrammarParser.PV, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode TXT() { return getToken(UFABCGrammarParser.TXT, 0); }
		public CmdAtrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAtr; }
	}

	public final CmdAtrContext cmdAtr() throws RecognitionException {
		CmdAtrContext _localctx = new CmdAtrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdAtr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(ID);
			 if (!isDeclared(_input.LT(-1).getText())) {
			                        throw new UFABCSemanticException("Variável [" +(_input.LT(-1).getText()) + "] não declarada!");
			                    } 
			                    symbolTable.get(_input.LT(-1).getText()).setInitialized(true);
			                    leftType = symbolTable.get(_input.LT(-1).getText()).getType();
			                    AttributionCommand cmdAtr = new AttributionCommand(symbolTable.get(_input.LT(-1).getText()));
			                    strExpr = "";
			                    rightType = null;
			                    
			setState(101);
			match(T__9);
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(102);
				expr();
				}
				break;
			case 2:
				{
				setState(103);
				match(ID);

				                        if (!isDeclared(_input.LT(-1).getText())) {
				                            throw new UFABCSemanticException("Variável [" +(_input.LT(-1).getText()) + "] não declarada!");
				                        }
				                        rightType = symbolTable.get(_input.LT(-1).getText()).getType();
				                        symbolTable.get(_input.LT(-1).getText()).setUsed(true);
				                    
				}
				break;
			case 3:
				{
				setState(105);
				match(TXT);
				 rightType = Types.TEXT; 
				                      strExpr += _input.LT(-1).getText();
				                    
				}
				break;
			}
			setState(109);
			match(PV);
			   
			                    if(rightType != leftType) {
			                        throw new UFABCSemanticException(String.format("Atribuição inválida! variável é do tipo %s, mas recebe atribuição do tipo %s", leftType, rightType));
			                    }
			                    cmdAtr.setContent(strExpr);
			                    stack.peek().add(cmdAtr);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdIFContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(UFABCGrammarParser.AP, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> OP_REL() { return getTokens(UFABCGrammarParser.OP_REL); }
		public TerminalNode OP_REL(int i) {
			return getToken(UFABCGrammarParser.OP_REL, i);
		}
		public TerminalNode FP() { return getToken(UFABCGrammarParser.FP, 0); }
		public List<TerminalNode> AC() { return getTokens(UFABCGrammarParser.AC); }
		public TerminalNode AC(int i) {
			return getToken(UFABCGrammarParser.AC, i);
		}
		public List<TerminalNode> FC() { return getTokens(UFABCGrammarParser.FC); }
		public TerminalNode FC(int i) {
			return getToken(UFABCGrammarParser.FC, i);
		}
		public TerminalNode OP_LOG() { return getToken(UFABCGrammarParser.OP_LOG, 0); }
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CmdIFContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdIF; }
	}

	public final CmdIFContext cmdIF() throws RecognitionException {
		CmdIFContext _localctx = new CmdIFContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdIF);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__10);
			 stack.push(new ArrayList<Command>());
			                       strExpr = "";
			                       currentIfCommand = new IfCommand();
			                     
			setState(114);
			match(AP);
			setState(115);
			expr();
			setState(116);
			match(OP_REL);
			 strExpr += " " + _input.LT(-1).getText() + " "; 
			setState(118);
			expr();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_LOG) {
				{
				setState(119);
				match(OP_LOG);
				 strExpr += " " + _input.LT(-1).getText() + " "; 
				setState(121);
				expr();
				setState(122);
				match(OP_REL);
				 strExpr += " " + _input.LT(-1).getText() + " "; 
				setState(124);
				expr();
				}
			}

			setState(128);
			match(FP);
			 currentIfCommand.setExpression(strExpr); 
			setState(130);
			match(T__11);
			setState(131);
			match(AC);
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				cmd();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4246272L) != 0) );
			setState(137);
			match(FC);
			 currentIfCommand.setTrueList(stack.pop()); 
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(139);
				match(T__12);
				 stack.push(new ArrayList<Command>()); 
				setState(141);
				match(AC);
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(142);
					cmd();
					}
					}
					setState(145); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4246272L) != 0) );
				setState(147);
				match(FC);
				 currentIfCommand.setFalseList(stack.pop());
				}
			}


			                    stack.peek().add(currentIfCommand);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
